force-app/main/default/objects/DonorGiftSummary/DonorGiftSummary.object-meta.xml
<CustomObject>
</CustomObject>