force-app/main/default/objects/DonorGiftSummary/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Stable external identifier for the Donor Gift Summary. Used to upsert historical / legacy giving totals from prior systems (archived CRM, spreadsheet migration, data lake) into this record. Format is free-form but should match the External_Id__c on the parent Account (e.g., LEGACY-CRM-A00123) so cross-system reconciliation stays traceable. Not required on records created by NPC rollups — those are keyed on DonorId.</description>
    <externalId>true</externalId>
    <inlineHelpText>External identifier from the legacy or source system this donor's historical giving was imported from. Used to upsert legacy totals without overwriting standard NPC rollups.</inlineHelpText>
    <label>External Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>