force-app/main/default/objects/DonorGiftSummary/fields/FQS_Annual_Donor_Level__c.field-meta.xml
<CustomField>
    <fullName>FQS_Annual_Donor_Level__c</fullName>
    <description>Text formula that returns the generic donor grouping (Entry, Mid, Major, or blank for sub-Entry) based on annual giving against the Annual_Min_Amount__c thresholds in FQS_Donor_Grouping custom metadata. Each tier's Credit_Type__c setting controls whether soft credits (CurrentYearSoftCreditsAmount) are added to GiftsThisYearAmount for that tier's comparison. Note: GiftsThisYearAmount is a calendar-year rollup from NPC; if your org uses a non-calendar fiscal year, validate whether this aligns with your reporting expectations. Returns blank when the donor is below the Entry annual threshold. Thresholds and Credit_Type are configured via Setup → Custom Metadata Types → FQS Donor Grouping or the FQS Setup screen flow. Changing threshold or Credit_Type values recalculates this field across all Donor Gift Summary records retroactively — no redeployment or batch job required.</description>
    <formula>IF((GiftsThisYearAmount + IF(TEXT($CustomMetadata.FQS_Donor_Grouping__mdt.Major.Credit_Type__c) = "Hard + Soft Credits", CurrentYearSoftCreditsAmount, 0)) >= $CustomMetadata.FQS_Donor_Grouping__mdt.Major.Annual_Min_Amount__c, "Major",
IF((GiftsThisYearAmount + IF(TEXT($CustomMetadata.FQS_Donor_Grouping__mdt.Mid.Credit_Type__c) = "Hard + Soft Credits", CurrentYearSoftCreditsAmount, 0)) >= $CustomMetadata.FQS_Donor_Grouping__mdt.Mid.Annual_Min_Amount__c, "Mid",
IF((GiftsThisYearAmount + IF(TEXT($CustomMetadata.FQS_Donor_Grouping__mdt.Entry.Credit_Type__c) = "Hard + Soft Credits", CurrentYearSoftCreditsAmount, 0)) >= $CustomMetadata.FQS_Donor_Grouping__mdt.Entry.Annual_Min_Amount__c, "Entry",
"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. Shows which annual donor grouping this donor belongs to (Entry, Mid, or Major) based on their giving in the current year. Blank means the donor is below the Entry annual threshold. Your administrator controls the threshold amounts.</inlineHelpText>
    <label>Annual Donor Grouping</label>
    <type>Text</type>
</CustomField>