force-app/main/default/objects/DonorGiftSummary/fields/FQS_Donor_Level__c.field-meta.xml
<CustomField>
    <fullName>FQS_Donor_Level__c</fullName>
    <description>The internal grouping tier for this donor (Entry, Mid, or Major), calculated from Total Gifts Amount against the FQS Donor Grouping thresholds in Setup → Custom Metadata Types. This field drives list view filters — use Donor Grouping Name for reports and donor-facing displays.</description>
    <formula>IF(TotalGiftsAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Major.Min_Amount__c, "Major",
IF(TotalGiftsAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Mid.Min_Amount__c, "Mid",
"Entry"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows which giving tier this donor belongs to based on their total lifetime giving. Tier thresholds are configured by your administrator. Use the Donor Grouping Name field for reports and communications.</inlineHelpText>
    <label>Donor Grouping</label>
    <type>Text</type>
</CustomField>