force-app/main/default/objects/DonorGiftSummary/fields/FQS_Donor_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>FQS_Donor_Level_Name__c</fullName>
    <description>The branded name for this donor's giving tier (e.g., Friend, Partner, Champion), pulled from the FQS Donor Grouping configuration in Setup → Custom Metadata Types. To rename a tier for all donors at once, update the Donor Grouping field on the matching FQS Donor Grouping record.</description>
    <formula>IF(TotalGiftsAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Major.Min_Amount__c, $CustomMetadata.FQS_Donor_Grouping__mdt.Major.Branded_Name__c,
IF(TotalGiftsAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Mid.Min_Amount__c, $CustomMetadata.FQS_Donor_Grouping__mdt.Mid.Branded_Name__c,
$CustomMetadata.FQS_Donor_Grouping__mdt.Entry.Branded_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The display name for this donor's giving tier (e.g., Friend, Partner, Champion). Your administrator controls these names — updating a tier name in Setup automatically reflects here for all donors in that tier.</inlineHelpText>
    <label>Donor Grouping Name</label>
    <type>Text</type>
</CustomField>