force-app/main/default/objects/DonorGiftSummary/fields/FQS_Is_Entry_Annual_Donor__c.field-meta.xml
<CustomField>
    <fullName>FQS_Is_Entry_Annual_Donor__c</fullName>
    <description>Boolean formula that returns TRUE when this donor's annual grouping is exactly Entry (not Mid, not Major). The three annual checkboxes (Entry / Mid / Major) are mutually exclusive — at most one is TRUE for any donor, matching FQS_Annual_Donor_Level__c. Uses the same annual-giving composition as FQS_Annual_Donor_Level__c (GiftsThisYearAmount, plus CurrentYearSoftCreditsAmount when the Entry tier's Credit_Type__c = "Hard + Soft Credits"). Thresholds and Credit_Type are configured via Setup → Custom Metadata Types → FQS Donor Tier or the FQS Setup screen flow. Changing threshold or Credit_Type values recalculates this field across all Donor Gift Summary records retroactively — no redeployment or batch job required. Reports and dashboards using this field will reflect the new values immediately.</description>
    <formula>FQS_Annual_Donor_Level__c = "Entry"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. The field is checked when this donor's current-year giving qualifies for the Entry donor tier. Your administrator controls the threshold amount.</inlineHelpText>
    <label>Is Entry Annual Donor</label>
    <type>Checkbox</type>
</CustomField>