force-app/main/default/objects/DonorGiftSummary/fields/FQS_Is_Entry_Lifetime_Donor__c.field-meta.xml
<CustomField>
    <fullName>FQS_Is_Entry_Lifetime_Donor__c</fullName>
    <description>Boolean formula that returns TRUE when this donor's lifetime grouping is exactly Entry (not Mid, not Major). The three lifetime checkboxes (Entry / Mid / Major) are mutually exclusive — at most one is TRUE for any donor, matching FQS_Lifetime_Donor_Level__c. Uses the same lifetime-giving composition as FQS_Lifetime_Donor_Level__c (TotalGiftsAmount + FQS_Legacy_Total_Gifts_Amount__c, plus TotalSoftCreditsAmount + FQS_Legacy_Soft_Credit_Total__c when the Entry tier's Credit_Type__c = "Hard + Soft Credits"). Thresholds and Credit_Type are configured via Setup → Custom Metadata Types → FQS Donor Tier or the FQS Setup screen flow. Changing threshold or Credit_Type values recalculates this field across all Donor Gift Summary records retroactively — no redeployment or batch job required. Reports and dashboards using this field will reflect the new values immediately.</description>
    <formula>FQS_Lifetime_Donor_Level__c = "Entry"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. The field is checked when this donor's total lifetime giving qualifies for the Entry donor tier. Your administrator controls the threshold amount.</inlineHelpText>
    <label>Is Entry Lifetime Donor</label>
    <type>Checkbox</type>
</CustomField>