force-app/main/default/objects/DonorGiftSummary/fields/FQS_Is_Mid_Annual_Donor__c.field-meta.xml
<CustomField>
    <fullName>FQS_Is_Mid_Annual_Donor__c</fullName>
    <description>Boolean formula that returns TRUE when GiftsThisYearAmount meets or exceeds the Mid.Annual_Min_Amount__c value in FQS_Donor_Grouping custom metadata. Note: GiftsThisYearAmount is a calendar-year rollup from NPC. Thresholds are configured via Setup → Custom Metadata Types → FQS Donor Grouping or the FQS Setup screen flow. Changing threshold values in Setup or via the FQS Setup flow recalculates this field across all Donor Gift Summary records retroactively — no redeployment or batch job required. Reports and dashboards using this field will reflect the new values immediately.</description>
    <formula>GiftsThisYearAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Mid.Annual_Min_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. The field is checked when this donor's current-year giving qualifies for the Mid donor grouping. Your administrator controls the threshold amount.</inlineHelpText>
    <label>Is Mid Annual Donor</label>
    <type>Checkbox</type>
</CustomField>