force-app/main/default/objects/DonorGiftSummary/fields/FQS_Is_Mid_Lifetime_Donor__c.field-meta.xml
<CustomField>
    <fullName>FQS_Is_Mid_Lifetime_Donor__c</fullName>
    <description>Boolean formula against the Mid row of FQS_Donor_Grouping__mdt lifetime thresholds.</description>
    <formula>FQS_Lifetime_Donor_Level__c = "Mid"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set automatically. Checked when this donor&apos;s lifetime giving qualifies at the Mid lifetime tier.</inlineHelpText>
    <label>Is Mid Lifetime Donor</label>
    <type>Checkbox</type>
</CustomField>