force-app/main/default/objects/DonorGiftSummary/fields/FQS_Legacy_First_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Legacy_First_Gift_Date__c</fullName>
    <description>The donor's earliest known gift date from a legacy or external system (archived CRM, spreadsheet migration, prior fundraising platform). Populated once during import and preserved thereafter — NPC rollups do not touch this field. When present, formulas that determine "first gift" behavior use MIN(FirstGiftDate, FQS_Legacy_First_Gift_Date__c) so migrated donors retain their true tenure. Leave blank for donors with no pre-system giving history.</description>
    <inlineHelpText>Earliest gift date from a legacy or external system. Preserved across NPC rollups so migrated donors keep their full historical tenure.</inlineHelpText>
    <label>Legacy First Gift Date</label>
    <type>Date</type>
</CustomField>