force-app/main/default/objects/DonorGiftSummary/fields/FQS_Legacy_Gift_Count__c.field-meta.xml
<CustomField>
    <fullName>FQS_Legacy_Gift_Count__c</fullName>
    <description>Count of hard-credit gifts from legacy or external systems (archived CRM, spreadsheet migration, prior fundraising platform). Populated once during import and preserved thereafter — NPC rollups do not touch this field. FQS reports and dashboards add this to the standard GiftCount rollup so migrated donors show their true lifetime gift frequency. Leave blank for donors with no pre-system giving history.</description>
    <inlineHelpText>Count of hard-credit gifts from a legacy or external system. Adds to the standard GiftCount rollup for reporting.</inlineHelpText>
    <label>Legacy Gift Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>