force-app/main/default/objects/DonorGiftSummary/fields/FQS_Legacy_Total_Gifts_Amount__c.field-meta.xml
<CustomField>
    <fullName>FQS_Legacy_Total_Gifts_Amount__c</fullName>
    <description>Sum of hard-credit giving from legacy or external systems (archived CRM, spreadsheet migration, prior fundraising platform). Populated once during import and preserved thereafter — NPC rollups do not touch this field. FQS donor-grouping formulas add this to the standard TotalGiftsAmount rollup so migrated donors retain their true lifetime giving picture. Leave blank for donors with no pre-system giving history.</description>
    <inlineHelpText>Total hard-credit giving from a legacy or external system. Adds to the standard TotalGiftsAmount rollup for donor-grouping calculations.</inlineHelpText>
    <label>Legacy Total Gifts Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>