force-app/main/default/objects/DonorGiftSummary/fields/FQS_Lifetime_Donor_Level__c.field-meta.xml
<CustomField>
    <fullName>FQS_Lifetime_Donor_Level__c</fullName>
    <description>Text formula that returns the generic donor grouping (Entry, Mid, Major, or blank for sub-Entry) based on TotalGiftsAmount against the Lifetime_Min_Amount__c thresholds in FQS_Donor_Grouping custom metadata. Returns blank when TotalGiftsAmount is below the Entry lifetime threshold. Thresholds are configured via Setup → Custom Metadata Types → FQS Donor Grouping or the FQS Setup screen flow. Changing threshold values recalculates this field across all Donor Gift Summary records retroactively — no redeployment or batch job required. Reports and dashboards will reflect new values immediately. Use FQS_Lifetime_Donor_Level_Name__c for donor-facing displays.</description>
    <formula>IF(TotalGiftsAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Major.Lifetime_Min_Amount__c, "Major",
IF(TotalGiftsAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Mid.Lifetime_Min_Amount__c, "Mid",
IF(TotalGiftsAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Entry.Lifetime_Min_Amount__c, "Entry",
"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. Shows which lifetime donor grouping this donor belongs to (Entry, Mid, or Major) based on their total lifetime giving. Blank means the donor is below the Entry threshold. Your administrator controls the threshold amounts. Use the Lifetime Donor Grouping Name field for reports and communications.</inlineHelpText>
    <label>Lifetime Donor Grouping</label>
    <type>Text</type>
</CustomField>