force-app/main/default/objects/DonorGiftSummary/fields/FQS_Lifetime_Donor_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>FQS_Lifetime_Donor_Level_Name__c</fullName>
    <description>Text formula that returns the branded donor tier name (e.g., Friend, Partner, Champion) based on lifetime giving against the Lifetime_Min_Amount__c thresholds in FQS_Donor_Tier custom metadata. Lifetime giving = TotalGiftsAmount (standard NPC rollup) + FQS_Legacy_Total_Gifts_Amount__c (imported from legacy systems). Each tier's Credit_Type__c setting controls whether soft credits (TotalSoftCreditsAmount + FQS_Legacy_Soft_Credit_Total__c) are added for that tier's comparison. Returns blank when the donor is below the Entry lifetime threshold. Thresholds, branded names, and Credit_Type are configured via Setup → Custom Metadata Types → FQS Donor Tier or the FQS Setup screen flow. Changing threshold, branded name, or Credit_Type values recalculates this field across all Donor Gift Summary records retroactively — no redeployment or batch job required. Reports and dashboards will reflect new values immediately.</description>
    <formula>IF((TotalGiftsAmount + FQS_Legacy_Total_Gifts_Amount__c + IF(TEXT($CustomMetadata.FQS_Donor_Tier__mdt.Major.Credit_Type__c) = "Hard + Soft Credits", TotalSoftCreditsAmount + FQS_Legacy_Soft_Credit_Total__c, 0)) >= $CustomMetadata.FQS_Donor_Tier__mdt.Major.Lifetime_Min_Amount__c, $CustomMetadata.FQS_Donor_Tier__mdt.Major.Branded_Name__c,
IF((TotalGiftsAmount + FQS_Legacy_Total_Gifts_Amount__c + IF(TEXT($CustomMetadata.FQS_Donor_Tier__mdt.Mid.Credit_Type__c) = "Hard + Soft Credits", TotalSoftCreditsAmount + FQS_Legacy_Soft_Credit_Total__c, 0)) >= $CustomMetadata.FQS_Donor_Tier__mdt.Mid.Lifetime_Min_Amount__c, $CustomMetadata.FQS_Donor_Tier__mdt.Mid.Branded_Name__c,
IF((TotalGiftsAmount + FQS_Legacy_Total_Gifts_Amount__c + IF(TEXT($CustomMetadata.FQS_Donor_Tier__mdt.Entry.Credit_Type__c) = "Hard + Soft Credits", TotalSoftCreditsAmount + FQS_Legacy_Soft_Credit_Total__c, 0)) >= $CustomMetadata.FQS_Donor_Tier__mdt.Entry.Lifetime_Min_Amount__c, $CustomMetadata.FQS_Donor_Tier__mdt.Entry.Branded_Name__c,
"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. Shows the branded donor tier name for this donor based on their total lifetime giving (e.g., Friend, Partner, Champion). Blank means the donor is below the Entry threshold. Your administrator controls both the threshold amounts and donor tier names.</inlineHelpText>
    <label>Lifetime Donor Tier Name</label>
    <type>Text</type>
</CustomField>