force-app/main/default/objects/DonorGiftSummary/listViews/FQS_Current_Year_Givers.listView-meta.xml
<ListView>
    <fullName>FQS_Current_Year_Givers</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>GiftsThisYearAmount</columns>
    <columns>CurrentYearGiftCount</columns>
    <columns>LastGiftDate</columns>
    <columns>FQS_Donor_Level__c</columns>
    <columns>FQS_Donor_Level_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GiftsThisYearAmount</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>FQS Current Year Givers</label>
</ListView>