force-app/main/default/objects/DonorGiftSummary/listViews/FQS_Major_Donors.listView-meta.xml
<ListView>
    <fullName>FQS_Major_Donors</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TotalGiftsAmount</columns>
    <columns>GiftCount</columns>
    <columns>LastGiftDate</columns>
    <columns>FQS_Donor_Level__c</columns>
    <columns>FQS_Donor_Level_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Donor_Level__c</field>
        <operation>equals</operation>
        <value>Major</value>
    </filters>
    <label>FQS Major Donors</label>
</ListView>